--- a/index-about.html
+++ b/index-about.html
@@ -128,7 +128,7 @@
                                                     </ul>
                                                 </div>
                                                 <div class="col-12 mt-1"><a class="button" href="https://drive.google.com/file/d/14gLwSyTLR4ZD0Hhlz9DglQBDS0yf-mmL/view?usp=drivesdk"
-                                                        download="" style="cursor: none;"><span
+                                                        download="" ><span
                                                             class="button-text">Download Resume</span><span
                                                             class="button-icon fa fa-download"></span></a></div>
                                             </div>
