--- a/index-contact.html
+++ b/index-contact.html
@@ -32,7 +32,7 @@
 </head>
 
 <body data-aos-easing="ease" data-aos-duration="1200" data-aos-delay="0" data-new-gr-c-s-check-loaded="14.1088.0"
-    data-gr-ext-installed="" style="cursor: none;">
+    data-gr-ext-installed="" >
     <div id="__next">
         <div
             style="z-index: 999; display: block; position: fixed; border-radius: 50%; pointer-events: none; width: 44px; height: 44px; background-color: rgba(255, 160, 1, 0.3); transition: opacity 0.15s ease-in-out 0s, transform 0.15s ease-in-out 0s; will-change: transform; transform: translate(-50%, -50%) scale(1); opacity: 0; top: 467px; left: 422px;">
@@ -91,17 +91,17 @@
                                     <p class="open-sans-font custom-span-contact position-relative"><i
                                             class="fa fa-envelope-open position-absolute"></i><span class="d-block">mail
                                             me</span> <a href="mailto:devamitra1611@mail.com"
-                                            style="cursor: none;">devamitra1611@mail.com</a></p>
+                                           >devamitra1611@mail.com</a></p>
                                     <p class="open-sans-font custom-span-contact position-relative"><i
                                             class="fa fa-phone-square position-absolute"></i><span class="d-block">call
-                                            me</span> <a href="Tel: +91 6380938452" style="cursor: none;">+91 63809 38452</a></p>
+                                            me</span> <a href="Tel: +91 6380938452" >+91 63809 38452</a></p>
                                     <ul class="social list-unstyled pt-1 mb-5">
                                         <li><a href="https://www.instagram.com/deva_mitra_/" target="_blank" rel="noreferrer"
-                                                style="cursor: none;"><i class="fa fa-instagram"></i></a></li>
+                                                ><i class="fa fa-instagram"></i></a></li>
                                         <li><a href="https://github.com/devamitra16" target="_blank" rel="noreferrer"
-                                                style="cursor: none;"><i class="fa fa-github"></i></a></li>
+                                                ><i class="fa fa-github"></i></a></li>
                                         <li><a href="https://www.linkedin.com/in/devamitra-t/" target="_blank" rel="noreferrer"
-                                                style="cursor: none;"><i class="fa fa-linkedin"></i></a></li>
+                                                ><i class="fa fa-linkedin"></i></a></li>
                                     
                                     </ul>
                                 </div>
@@ -110,25 +110,25 @@
                                         <div class="row">
                                             <div class="col-12 col-md-6">
                                                 <div class="form-group"><input type="text" name="name"
-                                                        placeholder="YOUR NAME" required="" style="cursor: none;"></div>
+                                                        placeholder="YOUR NAME" required="" div>
                                             </div>
                                             <div class="col-12 col-md-6">
                                                 <div class="form-group"><input type="email" name="user_email"
-                                                        placeholder="YOUR EMAIL" required="" style="cursor: none;">
+                                                        placeholder="YOUR EMAIL" required="">
                                                 </div>
                                             </div>
                                             <div class="col-12 col-md-12">
                                                 <div class="form-group"><input type="text" name="subject"
-                                                        placeholder="YOUR SUBJECT" required="" style="cursor: none;">
+                                                        placeholder="YOUR SUBJECT" required="">
                                                 </div>
                                             </div>
                                             <div class="col-12">
                                                 <div class="form-group"><textarea name="message"
                                                         placeholder="YOUR MESSAGE" required=""
-                                                        style="cursor: none;"></textarea></div>
+                                                       ></textarea></div>
                                             </div>
                                             <div class="col-12"><button type="submit" class="button"
-                                                    style="cursor: none;"><span class="button-text">Send
+                                                   ><span class="button-text">Send
                                                         Message</span><span
                                                         class="button-icon fa fa-send"></span></button></div>
                                         </div>
