--- a/index-project.html
+++ b/index-project.html
@@ -121,7 +121,7 @@
                                                     
                                                     src="assests/AI-powered-voice-assistant.jpg"
                                                     width="895" height="552">
-                                            </figure><a href="index-portfolio.html"><button class="close-modal" style="cursor: none;"><img alt="portfolio project demo"
+                                            </figure><a href="index-portfolio.html"><button class="close-modal" ><img alt="portfolio project demo"
                                                     srcset="assests/cancel.ba9b29b7.svg 1x, assests/cancel.ba9b29b7.svg 2x"
                                                     src="assests/cancel.ba9b29b7.svg" width="512" height="512" decoding="async"
                                                     data-nimg="1" loading="lazy" style="color: transparent;"></button>
