--- a/index-about.html
+++ b/index-about.html
@@ -84,7 +84,7 @@
                                                     <h3 class="text-uppercase custom-title mb-0 ft-wt-600">personal
                                                         infos</h3>
                                                 </div>
-                                                <p>Hello! I am a third year student at Sri Eshwar College of Engineering with a major in Computer Science.</p>
+                                                <p>Hello! I am a third year student at Sri Eshwar College of Engineering with a major in Computer Science.<br>My natural curiosity for computers is what drove me towards my computer science degree. I’ve always been fascinated by computers and the technical mechanics behind the monitor.</p>
                                                 <div class="col-12 d-block d-sm-none"><img alt="about avatar"
                                                         
                                                         src="assests/aboutimg.png"
