--- a/index-project.html
+++ b/index-project.html
@@ -82,7 +82,7 @@
                                         id="panel:r1:0" aria-labelledby="tab:r1:0">
                                         <div class="tab-container">
                                             <div data-aos="fade-right" data-aos-delay="0" class="aos-init aos-animate">
-                                                <div class="tab-content"><img src="assests/AI-powered-voice-assistant.jpg" width="89" height="55" alt="portfolio project demo">
+                                                <div class="tab-content"><img src="assests/portfoliobanner.jpeg" width="89" height="55" alt="portfolio project demo">
                                                     <h3><span class="conent-title">ARTIFICIAL INTELLIGENCE project</span></h3>
                                                 </div>
                                             </div>
