--- a/index-project.html
+++ b/index-project.html
@@ -119,7 +119,7 @@
                                             
                                             <figure class="modal__img"><img alt="portfolio project demo"
                                                     
-                                                    src="assests/AI-powered-voice-assistant.jpeg"
+                                                    src="assests/AI-powered-voice-assistant.jpg"
                                                     width="895" height="552">
                                             </figure><a href="index-portfolio.html"><button class="close-modal" ><img alt="portfolio project demo"
                                                     srcset="assests/cancel.ba9b29b7.svg 1x, assests/cancel.ba9b29b7.svg 2x"
