--- a/index.html
+++ b/index.html
@@ -74,14 +74,11 @@
               <div class="color-block d-none d-lg-block"></div>
               <div class="row home-details-container align-items-center">
                 <div class="col-lg-4 bg position-fixed d-none d-lg-block"
-                  style="background-image:url(assests/Myphoto.jpg)"></div>
+                  style="background-image:url(assests/indeximg.jpg)"></div>
                 <div class="col-12 col-lg-8 offset-lg-4 home-details text-center text-lg-start">
                   <div>
-                    <!-- <img alt="hero man"
-                    srcset="assests/Myphoto.jpg&amp;w=384&amp;q=75 1x, assests/Myphoto.jpg&amp;w=640&amp;q=75 2x"
-                      src="assests/Myphoto.jpg"
-                      width="300" height="300" decoding="async" data-nimg="1"
-                      class="img-fluid main-img-mobile d-sm-block d-lg-none" loading="lazy" style="color:transparent"> -->
+                    <img alt="hero man"  
+                    src="assests/phoneviewimg.jpg" width="300" height="300" decoding="async" data-nimg="1" class="img-fluid main-img-mobile d-sm-block d-lg-none" loading="lazy" style="color:transparent">
                     <h1 class="text-uppercase poppins-font">I'm
                       <!-- -->
                       <!-- -->DEVAMITRA</h1>
