--- a/index-about.html
+++ b/index-about.html
@@ -85,10 +85,10 @@
                                                         infos</h3>
                                                 </div>
                                                 <p>Hello! I am a third year student at Sri Eshwar College of Engineering with a major in Computer Science.<br>My natural curiosity for computers is what drove me towards my computer science degree. I’ve always been fascinated by computers and the technical mechanics behind the monitor.</p>
-                                                <div class="col-12 d-block d-sm-none"><img alt="about avatar"
+                                               <div class="col-12 d-block d-sm-none">
                                                         
-                                                        src="assests/aboutimg.png"
-                                                        width="600" height="200" class="center"></div>
+                                                    <img alt="about avatar"  src="assests/speaker.JPG" width="100" height="500" decoding="async" data-nimg="1" class="img-fluid main-img-mobile" loading="lazy" style="color: transparent;">
+                                                </div>
                                                         
                                                 <div class="col-12">
                                                     <br>
