--- a/index-about.html
+++ b/index-about.html
@@ -296,7 +296,7 @@
                                                         <div class="icon"><i class="fa fa-briefcase"></i></div><span
                                                             class="time open-sans-font text-uppercase">2015 -
                                                             present</span>
-                                                        <h5 class="poppins-font text-uppercase">MOC<span
+                                                        <h5 class="poppins-font text-uppercase">Emcee<span
                                                                 class="place open-sans-font">General events</span></h5>
                                                         <p class="open-sans-font">Anchored many ceremonies and also have a passion for public speaking and motivational speeches</p>
                                                     </li>
