--- a/index-about.html
+++ b/index-about.html
@@ -282,15 +282,15 @@
                                                             </span>
                                                         <h5 class="poppins-font text-uppercase"> Full Stack Developer<span
                                                                 class="place open-sans-font">GS Solutions</span></h5>
-                                                        <p class="open-sans-font">Worked as an intern in the domain Full Stack Development and have gained much knowledge about both front end and backend development</p>
+                                                        <p class="open-sans-font">Worked as an intern in the domain Full Stack Development at gateway software solutions and have gained much knowledge about both front end and backend development</p>
                                                     </li>
                                                     <li>
                                                         <div class="icon"><i class="fa fa-briefcase"></i></div><span
                                                             class="time open-sans-font text-uppercase">2015 -
                                                             2017</span>
-                                                        <h5 class="poppins-font text-uppercase">Club Secretary<span
+                                                        <h5 class="poppins-font text-uppercase">Club Coordinator<span
                                                                 class="place open-sans-font">CE Club</span></h5>
-                                                        <p class="open-sans-font">Organized and Hosted many events successfully.</p>
+                                                        <p class="open-sans-font">Organized and Hosted many events successfully.This role helped me to enhance both my leadership skills and communication skills and also paved a way to bring up new insights in me.</p>
                                                     </li>
                                                     <li>
                                                         <div class="icon"><i class="fa fa-briefcase"></i></div><span
@@ -298,7 +298,7 @@
                                                             present</span>
                                                         <h5 class="poppins-font text-uppercase">Emcee<span
                                                                 class="place open-sans-font">General events</span></h5>
-                                                        <p class="open-sans-font">Anchored many ceremonies and also have a passion for public speaking and motivational speeches</p>
+                                                        <p class="open-sans-font">Anchored many ceremonies and also have a passion for content writing,public speaking and motivational speeches</p>
                                                     </li>
                                                 </ul>
                                             </div>
