--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                       <!-- -->DEVAMITRA</h1>
                       <h3 class="text-uppercase poppins-font"><!-- --><span>software engineer</span>
                     </h3>
-                    <p class="open-sans-font">I am passionate about computer programming and information technology. I am an enthusiastic, self-motivated, reliable, responsible hard working person and also an inquisitive, energetic computer science specialist skilled in leadership, with a strong foundation in math, logic, and cross-platform coding. 
+                    <p class="open-sans-font">I am passionate about computer programming and information technology. I am an enthusiastic, self-motivated, reliable, responsible hard working person and also an inquisitive, energetic computer science specialist skilled in leadership, with a strong foundation in math, logic, and programming. 
         </p><a href="index-about.html"><button class="button" ><span class="button-text">more about
                         me</span><span class="button-icon fa fa-arrow-right"></span></button></a>
                   </div>
