--- a/index-chatbot.html
+++ b/index-chatbot.html
@@ -116,6 +116,7 @@
                                                 </div>
                                                 <p>Description : It is a system that uses conversational AI technology to simulate a
                                                      a chat with a user in natural language via messaging.</p>
+                                                <p>Preview : <a href="https://github.com/devamitra16/AI-chatbot">https://github.com/devamitra16/AI-chatbot</a> </p>
                                             </div>
                                             
                                             <figure class="modal__img"><img alt="portfolio project demo"
