--- a/index-project.html
+++ b/index-project.html
@@ -114,7 +114,9 @@
                                                             class="ft-wt-600 uppercase">Python</span></div>
                                                     <!-- <div class="col-12 col-sm-6 mb-2"><i class="fa fa-external-link pr-2"></i>Description: </div> -->
                                                 </div>
+                                                
                                                 <p>Description : A virtual assistant, it is an application program that understands natural language voice commands and completes tasks for the user.</p>
+                                                 <p>Preview : <a href="https://github.com/devamitra16/Personal-AI-Assistant">https://github.com/devamitra16/Personal-AI-Assistant</a> </p>
                                             </div>
                                             
                                             <figure class="modal__img"><img alt="portfolio project demo"
