--- a/index-contact.html
+++ b/index-contact.html
@@ -92,9 +92,9 @@
                                             class="fa fa-envelope-open position-absolute"></i><span class="d-block">mail
                                             me</span> <a href="mailto:devamitra1611@mail.com"
                                            >devamitra1611@mail.com</a></p>
-                                    <p class="open-sans-font custom-span-contact position-relative"><i
+<!--                                     <p class="open-sans-font custom-span-contact position-relative"><i
                                             class="fa fa-phone-square position-absolute"></i><span class="d-block">call
-                                            me</span> <a href="Tel: +91 6380938452" >+91 63809 38452</a></p>
+                                            me</span> <a href="Tel: +91 6380938452" >+91 63809 38452</a></p> -->
                                     <ul class="social list-unstyled pt-1 mb-5">
                                         <li><a href="https://www.instagram.com/deva_mitra_/" target="_blank" rel="noreferrer"
                                                 ><i class="fa fa-instagram"></i></a></li>
