--- a/index-about.html
+++ b/index-about.html
@@ -125,7 +125,7 @@
                                                                
                                                     </ul>
                                                 </div>
-                                                <div class="col-12 mt-1"><a class="button" href="https://drive.google.com/file/d/16SzLBd5HVVdyKkUV1QdRpKVF_B3TNdSM/view?usp=drivesdk"
+                                                <div class="col-12 mt-1"><a class="button" href="https://drive.google.com/file/d/1CkNZVvSwTKo7IgbYnfI5nON80u7Q0Pbi/view?usp=drive_link"
                                                         download="" ><span
                                                             class="button-text">Download Resume</span><span
                                                             class="button-icon fa fa-download"></span></a></div>
